--- a/src/views/signin.ejs
+++ b/src/views/signin.ejs
@@ -4,7 +4,7 @@
     <title><%=title%></title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">  
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
    </head>
 
   <body>
@@ -84,36 +84,21 @@
 
 
               <!--/stories-->
-   
               <div class="row">
                 <br>
-                <div class="col-md-2 col-sm-3 text-center">
-                  <a class="story-title" href="#"><img alt="" src="<%=book.details.image_url%>" style="width:100px;height:100px"></a>
-                </div>
-                <div class="col-md-10 col-sm-9">
-                  <h3><%=book.title %></h3>
-                  <div class="row">
-                    <div class="col-xs-9">
-                      <h4><span class="label label-default"><%=book.author %></span></h4>
-                    </div>
-                    <div class="col-xs-3"></div>
-                  </div>
-                  <br><%-book.details.description%><br>
+                <div class="text-center">
+                  Sign In!
+
+                  <form name="signinForm" action="/auth/signin" method="post">
+                    UserName  <input type="text" name="username" id="username" /><br>
+                    Password <input type="text" name="password" id="password" /><br>
+                    <input type="submit" value="Sign In" />
+                  </form>
                 </div>
               </div>
-              <hr>
-      
-            
-              <!--/stories-->
-
-
-              <a href="/" class="btn btn-primary pull-right btnNext">More <i class="glyphicon glyphicon-chevron-right"></i></a>
-
 
             </div>
           </div>
-
-
 
         </div>
         <!--/col-12-->
